metadata-retriever/metadata/objects/Vehicle__c.object
<CustomObject>
    <description>Stores information on Vehicle (cannot be created, but specific fields can be updated)</description>
    <fields>
        <fullName>AMG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>signifies whether this vehicle is an AMG or not</description>
        <label>AMG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Date__c</fullName>
        <label>Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_User__c</fullName>
        <label>Add User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyBuilderInformation__c</fullName>
        <description>Will be used for busses</description>
        <label>Body Builder Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyType__c</fullName>
        <label>Body Type</label>
        <picklist>
            <picklistValues>
                <fullName>3 door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People Mover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Tourer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>MB brand</description>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACURA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFA ROMEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTON MARTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atkinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRAL DENNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENTLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Bogie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borcat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUGATTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADILLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERPILLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEVROLET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORSA SPECIALIZED VEHICLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAEWOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAIHATSU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CROUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CROUser</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Customer Retention Office</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Remarketing Team Lead</value>
            </filterItems>
            <filterItems>
                <field>User.Active_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Car_Model__c.Description__c</field>
                <operation>contains</operation>
                <valueField>$Source.Brand__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIGHTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F SERIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB 140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Forfour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Fortwo cabrio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionNo__c</fullName>
        <label>Commission No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Description of the vehicle 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is &quot;Vehicle_Description&quot;</description>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineNo__c</fullName>
        <label>Engine No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDCL_Vehicle_Id__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Vehicle Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OdometerReading__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Odometer Reading</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>describes what kind of vehicle it is.</description>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Commercial Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Commercial Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/Cycle or Scooter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passenger Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck &amp; Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMP_Car_Model__c</fullName>
        <description>Temprory field to store car model information for Quick-win: CMS data migration.</description>
        <label>TMP Car Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines whether the vehicle is a new, used or demonstration car</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <externalId>true</externalId>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vehicle_Group__c</fullName>
        <label>Vehicle Group</label>
        <picklist>
            <picklistValues>
                <fullName>VAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Name__c</fullName>
        <label>Vehicle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Site__c</fullName>
        <label>Vehicle Site</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YearOfManufacture__c</fullName>
        <label>Year of Manufacture</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>last_update_changed_by__c</fullName>
        <label>last update changed by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>last_updated__c</fullName>
        <label>last updated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>VIN__c</columns>
        <columns>NAME</columns>
        <columns>Source_System__c</columns>
        <columns>Car_Model__c</columns>
        <columns>BodyType__c</columns>
        <columns>Class__c</columns>
        <columns>CommissionNo__c</columns>
        <columns>Vehicle_Name__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Vehicle__c.Master</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>